[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Explosion.gd" type="Script" id=1]

[sub_resource type="Curve" id=3]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, -17.3393 ), 0.0, 710.85, 0, 0, Vector2( 1, 200 ), -21.0401, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, -0.0655845, 0, 0, Vector2( 0.727723, 0.861364 ), -0.869856, -0.869856, 0, 0, Vector2( 1, 0 ), 0.00778119, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=1]
interpolation_mode = 1
offsets = PoolRealArray( 0, 0.0614525, 0.122905, 0.189944, 0.324022, 0.463687, 0.636872, 0.821229, 0.955307 )
colors = PoolColorArray( 0.560784, 0.972549, 0.886275, 1, 1, 1, 1, 1, 0.984314, 1, 0.52549, 1, 0.984314, 0.72549, 0.329412, 1, 0.968627, 0.588235, 0.0901961, 1, 0.917647, 0.309804, 0.211765, 1, 0.431373, 0.152941, 0.152941, 1, 0.243137, 0.207843, 0.27451, 0.756863, 0.498039, 0.439216, 0.541176, 0.356863 )

[sub_resource type="CircleShape2D" id=4]
radius = 29.0

[node name="Explosion" type="CPUParticles2D"]
z_index = 5
emitting = false
amount = 750
lifetime = 1.3
one_shot = true
speed_scale = 2.5
explosiveness = 1.0
fract_delta = false
emission_shape = 1
emission_sphere_radius = 3.0
gravity = Vector2( 0, 0 )
initial_velocity_random = 1.0
orbit_velocity = 0.5
linear_accel = -100.0
linear_accel_curve = SubResource( 3 )
radial_accel = 85.32
tangential_accel = 7.33
tangential_accel_random = 1.0
damping = 78.51
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 1 )
script = ExtResource( 1 )

[node name="EffectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
shape = SubResource( 4 )

[connection signal="area_entered" from="EffectArea" to="." method="_on_EffectArea_area_entered"]
[connection signal="body_entered" from="EffectArea" to="." method="_on_EffectArea_body_entered"]
